<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name_prod">Wikipedia</string>
    <string name="app_name_beta" tools:ignore="UnusedResources">Wikipedia Beta</string>
    <string name="app_name_alpha" tools:ignore="UnusedResources">Wikipedia Alpha</string>
    <string name="wikimedia">Wikimedia</string>
    <string name="nav_item_back">Back</string>
    <string name="page_tabs_back">Back</string>
    <string name="nav_item_forward">Forward</string>
    <string name="search_hint">Search Wikipedia</string>
    <string name="search_hint_voice_search">Voice input search</string>
    <string name="search_hint_search_languages">Search for a language</string>
    <string name="search_back_button_content_description">Go back</string>
    <string name="search_clear_query_content_description">Clear query</string>
    <string name="search_icon_content_description">Search</string>
    <string name="filter_hint_filter_my_lists_and_articles">Filter my lists</string>
    <string name="nav_item_suggested_edits">Edits</string>
    <string name="nav_item_activity">Activity</string>
    <string name="nav_item_more">More</string>
    <string name="nav_item_search">Search</string>
    <string name="nav_item_contribute">Contribute</string>
    <string name="error_network_error">Cannot connect to the Internet.</string>
    <string name="page_error_retry">Retry</string>
    <string name="card_offline_error_retry">Retry</string>
    <string name="storage_access_error_retry">Retry</string>
    <string name="article_load_error_retry">Retry</string>
    <string name="offline_load_error_retry">Retry</string>
    <string name="page_error_back_to_main">Go back</string>
    <string name="error_back">Go back</string>
    <string name="error_next">Next</string>
    <string name="menu_clear_all_history">Clear reading history</string>
    <string name="history_item_deleted">%s removed from history</string>
    <string name="history_items_deleted">%d articles removed from history</string>
    <string name="history_item_delete_undo">Undo</string>
    <string name="notification_archive_undo">Undo</string>
    <string name="app_settings">App settings</string>
    <string name="search_tab_tooltip">Tap the icon again to directly start typing a search term.</string>
    <string name="history_list_title">History</string>
    <string name="image_content_description">Image: %s</string>
    <string name="page_content_description">Page: %s</string>
    <string name="wikimedia_commons">Wikimedia Commons</string>
    <string name="wikidata">Wikidata</string>
    <string name="dialog_title_clear_history">Clear browsing history</string>
    <string name="dialog_message_clear_history">This will delete all of your browsing history. Are you sure?</string>
    <string name="dialog_message_clear_history_yes">Yes</string>
    <string name="dialog_message_clear_history_no">No</string>
    <string name="share_via">Share via</string>
    <string name="image_share_via">Share via</string>
    <string name="search_redirect_from">Redirected from %s</string>
    <string name="page_edit_history_activity_title">Revision history: %s</string>
    <string name="page_edit_history_minor_edit"><![CDATA[<b>m</b> %s]]></string>
    <string name="page_edit_history_comment_placeholder">Empty edit summary</string>
    <string name="page_edit_history_search_or_filter_edits_hint">Search or filter edits</string>
    <string name="page_edit_history_filter_by">Filter by</string>
    <string name="page_edit_history_filter_by_all">All edits (%s)</string>
    <string name="page_edit_history_filter_by_user">User edits (%s)</string>
    <string name="page_edit_history_filter_by_anon">Unregistered edits (%s)</string>
    <string name="page_edit_history_filter_by_bot">Bot edits (%s)</string>
    <string name="page_edit_history_metrics_content_description">Metrics from %1$s to %2$s</string>
    <plurals name="page_edit_history_article_edits_since_year">
        <item quantity="one">%1$d edit since %2$s</item>
        <item quantity="other">%1$d edits since %2$s</item>
    </plurals>
    <plurals name="edits_since_year_per_wiki">
        <item quantity="one">%1$d edit since %2$s (%3$s)</item>
        <item quantity="other">%1$d edits since %2$s (%3$s)</item>
    </plurals>
    <string name="page_edit_history_empty_search_message"><![CDATA[Try changing <a href="#">filters</a> to see more edits]]></string>
    <string name="menu_page_show_tabs">Show tabs</string>
    <string name="menu_page_other_languages">Change language</string>
    <string name="menu_page_find_in_page">Find in article</string>
    <string name="menu_page_add_to_watchlist">Add to Watchlist</string>
    <string name="menu_page_watch">Watch</string>
    <string name="menu_page_unwatch">Unwatch</string>
    <string name="menu_page_view_talk">View talk page</string>
    <string name="menu_page_talk_page">Talk page</string>
    <string name="menu_page_view_edit_history">View edit history</string>
    <string name="menu_page_edit_history">Edit history</string>
    <string name="menu_page_remove_from_watchlist">Remove from Watchlist</string>
    <string name="menu_page_watched">Watched</string>
    <string name="edit_section_find_in_page">Find in page</string>
    <string name="menu_page_font_and_theme">Font and theme</string>
    <string name="menu_page_add_to_list">Add to reading list</string>
    <string name="menu_page_add_to_default_list">Save</string>
    <string name="feed_card_add_to_list">Add to reading list</string>
    <string name="feed_card_add_to_default_list">Save</string>
    <string name="menu_page_share">Share link</string>
    <string name="menu_article_share">Share article</string>
    <string name="menu_page_article_share">Share</string>
    <string name="menu_page_open_a_new_tab">Open a new tab</string>
    <string name="menu_page_new_tab">New tab</string>
    <string name="menu_page_reading_lists">Reading lists</string>
    <string name="menu_page_recently_viewed">Recently viewed</string>
    <string name="menu_page_archive">Archive</string>
    <string name="menu_long_press_open_page">Open</string>
    <string name="menu_long_press_open_in_places">Open in Places</string>
    <string name="menu_long_press_open_in_new_tab">Open in new tab</string>
    <string name="menu_long_press_copy_page">Copy link address</string>
    <string name="menu_text_select_define">Define</string>
    <string name="on_this_day_page_share">Share</string>
    <string name="reading_list_page_share">Share</string>
    <string name="menu_text_select_edit_here">Edit here</string>
    <string name="menu_edit_article">Edit article</string>
    <string name="last_updated_text">Last updated %s</string>
    <string name="talk_page_link_text">View talk page</string>
    <string name="edit_history_link_text">View edit history</string>
    <string name="map_view_link_text">View on a map</string>
    <string name="other_languages_indication_text">Read in another language</string>
    <string name="language_count_link_text">Available in %d other languages</string>
    <string name="content_license_cc_by_sa">CC BY-SA 4.0</string>
    <string name="edit_save_action_license_logged_in"><![CDATA[By publishing, you agree to the <a href="%1$s">Terms of Use</a>, and to irrevocably release your contributions under the <a href="%2$s">CC BY-SA 4.0</a> license.]]></string>
    <string name="edit_save_action_license_anon"><![CDATA[By publishing, you agree to the <a href="%1$s">Terms of Use</a>, and to irrevocably release your contributions under the <a href="%2$s/">CC BY-SA 4.0</a> license. Edits will be attributed to the IP address of your device. If you <a href="https://#login">log in</a>, you will have more privacy.]]></string>
    <string name="langlinks_activity_title">Other languages</string>
    <string name="menu_save_changes">Publish changes</string>
    <string name="delete_selected_items">Delete selected items</string>
    <string name="wikipedia_app_faq">Wikipedia App FAQ</string>
    <string name="about_description">About the Wikipedia app</string>
    <string name="privacy_policy_description">Privacy policy</string>
    <string name="terms_of_use_description">Terms of use</string>
    <string name="privacy_policy_url">https://foundation.wikimedia.org/wiki/Special:MyLanguage/Privacy_policy</string>
    <string name="terms_of_use_url">https://foundation.wikimedia.org/wiki/Special:MyLanguage/Terms_of_Use</string>
    <string name="about_activity_title">About</string>
    <string name="edit_notices">Edit notices</string>
    <string name="page_similar_titles">Similar pages</string>
    <string name="button_continue_to_article">Read article</string>
    <string name="button_get_directions">Get directions</string>
    <string name="reading_list_sort">Sort</string>
    <string name="reading_list_sort_by_name">Sort by name</string>
    <string name="reading_list_sort_by_recent">Sort by date added (newest)</string>
    <string name="reading_list_menu_delete">Delete list</string>
    <string name="reading_list_menu_export">Export list</string>
    <string name="reading_list_menu_select">Select</string>
    <string name="reading_list_menu_rename">Edit name/description</string>
    <string name="reading_list_action_menu_remove_from_offline">Remove from offline</string>
    <string name="reading_list_action_menu_save_for_offline">Save for offline</string>
    <string name="reading_list_action_menu_remove_all_from_offline">Remove all from offline</string>
    <string name="reading_list_action_menu_save_all_for_offline">Save all for offline</string>
    <string name="reading_list_action_menu_add_to_another_list">Add to another list</string>
    <string name="reading_list_action_menu_move_to_another_list">Move to another list</string>
    <string name="reading_lists_action_menu_export_lists">Export</string>
    <string name="notifications_activity_title">Notifications</string>
    <string name="notifications_search">Search notifications</string>
    <string name="notifications_view_unread">View unread</string>
    <string name="notifications_view_archived">View archived</string>
    <string name="notifications_prefs">Notification preferences</string>
    <string name="notifications_mark_unread">Mark as unread</string>
    <string name="notifications_menu_mark_as_read">Mark as read</string>
    <string name="notifications_menu_check_all">Check all items</string>
    <string name="notifications_menu_uncheck_all">Uncheck all items</string>
    <string name="menu_feed_overflow_label">More options</string>
    <string name="suggested_edits_learn_more">Learn more</string>
    <string name="image_recommendation_tutorial">Tutorial</string>
    <string name="suggested_edits_report_feature">Problem with feature</string>
    <string name="activity_tab_menu_feedback">Problem with feature</string>
    <string name="activity_tab_menu_info">Learn more</string>
    <string name="activity_tab_menu_customize">Customize</string>
    <string name="talk_list_item_overflow_subscribe">Subscribe</string>
    <string name="talk_list_item_overflow_mark_as_read">Mark as read</string>
    <string name="talk_list_item_overflow_share">Share</string>
    <string name="menu_option_edit_source">Edit source</string>
    <string name="menu_option_user_page">%s user page</string>
    <string name="talk_menu_expand_threads">Expand threads</string>
    <string name="talk_menu_collapse_threads">Collapse threads</string>
    <string name="menu_option_view_user_profile">View user page</string>
    <string name="menu_option_view_user_talk">View talk page</string>
    <string name="menu_option_view_user_contributions">View user contributions</string>
    <string name="action_item_view_on_map">View on map</string>
    <string name="reading_list_share_menu_label">Share…</string>
    <string name="patroller_tasks_overflow_report">Problem with feature</string>
    <string name="patroller_tasks_overflow_learn">Learn more</string>
</resources>