<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/about_activity_title">
        <org.wikipedia.settings.PreferenceMultiLine
            android:key="@string/preference_key_about_wikipedia_app"
            android:title="@string/about_description" />
        <org.wikipedia.settings.PreferenceMultiLineWithExternalLink
            android:title="@string/wikipedia_app_faq">
            <intent android:action="android.intent.action.VIEW"
                    android:data="https://m.mediawiki.org/wiki/Wikimedia_Apps/Android_FAQ"
                    />
        </org.wikipedia.settings.PreferenceMultiLineWithExternalLink>
        <org.wikipedia.settings.PreferenceMultiLineWithExternalLink
            android:title="@string/privacy_policy_description">
            <intent android:action="android.intent.action.VIEW"
                    android:data="@string/privacy_policy_url"
                    />
        </org.wikipedia.settings.PreferenceMultiLineWithExternalLink>
        <org.wikipedia.settings.PreferenceMultiLineWithExternalLink
            android:title="@string/terms_of_use_description">
            <intent android:action="android.intent.action.VIEW"
                    android:data="@string/terms_of_use_url"
                    />
        </org.wikipedia.settings.PreferenceMultiLineWithExternalLink>
    </PreferenceCategory>

</android.support.v7.preference.PreferenceScreen>