<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">
    <!--
    Some of the items in this menu are marked with showAsAction="always" on purpose:
    We truly want the "search" and "tabs" buttons to always be shown in the toolbar, even on small
    screens, instead of overflowing into the native overflow menu.
    -->
    <item android:id="@+id/menu_page_search"
        android:title="@string/search_hint"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="always" />
    <item android:id="@+id/menu_page_show_tabs"
          android:title="@string/menu_page_show_tabs"
          app:showAsAction="always" />
    <item android:id="@+id/menu_page_other_languages"
          android:title="@string/menu_page_other_languages"
          app:showAsAction="never"
          android:enabled="false" />
    <item android:id="@+id/menu_page_share"
          android:title="@string/menu_page_share"
          app:showAsAction="never"
          android:enabled="false" />
    <item android:id="@+id/menu_page_add_to_list"
          android:title="@string/menu_page_add_to_list"
          app:showAsAction="never"
          android:enabled="false" />
    <item android:id="@+id/menu_page_find_in_page"
          android:title="@string/menu_page_find_in_page"
          app:showAsAction="never"
          android:enabled="false" />
    <item android:id="@+id/menu_page_content_issues"
          android:title="@string/menu_page_content_issues"
          app:showAsAction="never"
          android:enabled="false" />
    <item android:id="@+id/menu_page_similar_titles"
          android:title="@string/page_similar_titles"
          app:showAsAction="never"
          android:enabled="false" />
    <item android:id="@+id/menu_page_font_and_theme"
          android:title="@string/menu_page_font_and_theme"
          app:showAsAction="never"
          android:enabled="false" />

</menu>
