<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/menu_notifications"
        android:title="@string/notifications_activity_title"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_notifications_group"
        android:icon="@drawable/ic_more_vert_themed_24dp"
        android:title="@string/nav_item_more"
        app:showAsAction="always">
        <menu>

            <item
                android:id="@+id/menu_watch"
                android:icon="@drawable/ic_star_24"
                android:title="@string/menu_page_watch"
                android:visible="false"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_change_language"
                android:icon="@drawable/ic_translate_toolbar_icon_color_themed"
                android:title="@string/langlinks_activity_title"
                android:visible="false"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_view_user_page"
                android:icon="@drawable/ic_user_avatar_material_secondary_themed"
                android:title="@string/menu_option_user_page"
                android:visible="false"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_read_article"
                android:icon="@drawable/ic_article_ltr_ooui"
                android:title="@string/button_continue_to_article"
                android:visible="false"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_view_edit_history"
                android:icon="@drawable/ic_icon_revision_history_apps"
                app:iconTint="?attr/secondary_text_color"
                android:title="@string/menu_page_edit_history"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_talk_topic_share"
                android:icon="@drawable/ic_share_material_secondary_themed"
                android:title="@string/menu_page_article_share"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>