<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_notifications_search"
        android:icon="@drawable/ic_search_themed_24dp"
        android:title="@string/notifications_search"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/menu_notifications_view_archived"
        android:title="@string/notifications_view_archived"
        app:showAsAction="never" />
    <item android:id="@+id/menu_notifications_view_unread"
        android:title="@string/notifications_view_unread"
        app:showAsAction="never" />
    <item android:id="@+id/menu_notifications_prefs"
        android:title="@string/notifications_prefs"
        app:showAsAction="never" />
</menu>