<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_search_lists"
        android:icon="@drawable/ic_filter_list_24"
        android:title="@string/filter_hint_filter_my_lists_and_articles"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/menu_sort_options"
          android:icon="@drawable/ic_sort_white_24dp"
          android:title="@string/reading_list_sort"
          app:showAsAction="always">
        <menu>
            <item android:id="@+id/menu_sort_by_name"
                android:title="@string/reading_list_sort_by_name" />
            <item android:id="@+id/menu_sort_by_recent"
                android:title="@string/reading_list_sort_by_recent" />
        </menu>
    </item>
</menu>