<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_check_all"
        android:icon="@drawable/ic_outline_library_add_check_24"
        android:title="@string/notifications_menu_check_all"
        app:showAsAction="always" />

    <item android:id="@+id/menu_uncheck_all"
        android:icon="@drawable/ic_deselect_all"
        android:visible="false"
        android:title="@string/notifications_menu_uncheck_all"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_delete_selected"
        android:icon="@drawable/ic_delete_main_themed_24dp"
        android:title="@string/delete_selected_items"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_export_selected"
        android:title="@string/reading_lists_action_menu_export_lists"
        app:showAsAction="always" />
</menu>