<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">
    <item android:id="@+id/menu_search_lists"
        android:icon="@drawable/ic_baseline_filter_list_24"
        android:title="@string/filter_hint_filter_my_lists_and_articles"
        android:visible="false"
        app:showAsAction="always" />
    <item android:id="@+id/menu_tabs"
        android:title="@string/menu_page_show_tabs"
        app:showAsAction="always"/>
    <item android:id="@+id/menu_notifications"
        android:title="@string/notifications_activity_title"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_overflow_button"
        android:icon="@drawable/ic_more_vert_themed_24dp"
        android:title="@string/menu_feed_overflow_label"
        android:visible="false"
        app:showAsAction="always" />
</menu>
