<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_edit_notices"
        android:icon="@drawable/ic_warning_24"
        android:title="@string/edit_notices"
        app:iconTint="?attr/placeholder_color"
        app:showAsAction="always" />
    <item android:id="@+id/menu_find_in_editor"
        android:icon="@drawable/ic_find_in_page_24px"
        android:title="@string/menu_page_find_in_page"
        app:iconTint="?attr/placeholder_color"
        app:showAsAction="always" />
    <item android:id="@+id/menu_edit_theme"
        android:icon="@drawable/ic_icon_format_size"
        android:title="@string/menu_page_font_and_theme"
        app:iconTint="?attr/placeholder_color"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_save_section"
        android:enabled="false"
        android:title="@string/menu_save_changes"
        app:showAsAction="always|withText" />
</menu>